k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-me
  labels:
    app.kubernetes.io/part-of: infra-me
