k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: infra-me
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: infra-me
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 3000
      targetPort: http
